--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "@nuxtjs/vercel-builder": "^0.24.0",
     "cheerio": "^1.0.0-rc.12",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
